--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>mosto popup</title>
     <link rel="stylesheet" href="style.css" media="screen">
+    <script src="popup.js"></script>
   </head>
   <body>
 
