--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,53 @@
     <script src="popup.js"></script>
   </head>
   <body>
-    <div class="ciao">ciao</div>
+    <div class="container">
+      <div class="switch">
+        <span>Select device</span>
+        <ul class="switch_menu">
+          <li id="mobile">
+            <i class="icon" aria-hidden="true">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24px" height="24px" viewBox="0 0 24 24">
+                <g >
+                <path d="M18,0H6C4.346,0,3,1.346,3,3v18c0,1.654,1.346,3,3,3h12c1.654,0,3-1.346,3-3V3C21,1.346,19.654,0,18,0z
+             M12,22c-0.552,0-1-0.448-1-1s0.448-1,1-1s1,0.448,1,1S12.552,22,12,22z M19,17c0,0.552-0.448,1-1,1H6c-0.552,0-1-0.448-1-1V4
+            c0-0.552,0.448-1,1-1h12c0.552,0,1,0.448,1,1V17z"/>
+                </g>
+              </svg>
+            </i>
+          </li>
+          <li id="desktop">
+            <i class="icon" aria-hidden=true>
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24px" height="24px" viewBox="0 0 24 24"><g >
+              <path d="M23,1H1C0.448,1,0,1.448,0,2v16c0,0.552,0.448,1,1,1h9v2H6c-0.552,0-1,0.448-1,1s0.448,1,1,1h12
+              c0.552,0,1-0.448,1-1s-0.448-1-1-1h-4v-2h9c0.552,0,1-0.448,1-1V2C24,1.448,23.552,1,23,1z M22,17H2V3h20V17z"/>
+              </g></svg>
+
+            </i>
+          </li>
+        </ul>
+      </div>
+      <div class="language">
+        <span>Change country</span>
+        <ul class="language_menu">
+          <li class="IT">IT</li>
+          <li class="US">US</li>
+          <li class="DE">DE</li>
+          <li class="ES">ES</li>
+          <li class="CN">CN</li>
+          <li class="JP">JP</li>
+          <li class="RU">RU</li>
+        </ul>
+      </div>
+      <div class="environment">
+        <span>Select environment</span>
+        <ul class="environment_menu">
+          <li class="local">LCL</li>
+          <li class="plugin">W-PLUG</li>
+          <li class="yooxbox">YXBX</li>
+          <li class="prod">PROD</li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
